# CatChase

./: .gitignore  CMakeLists.txt  Collision.h  DebugDraw.cpp  DebugDraw.h  Dog.cpp  Dog.h  Enemies.h  Enemy.cpp  Enemy.h  EnemyRegistry.cpp  EnemyRegistry.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  NineSliceRenderer.cpp  NineSliceRenderer.h  NuklearRenderer.cpp  NuklearRenderer.h  PauseMenu.cpp  PauseMenu.h  RESOURCE_MANAGER.cpp  RESOURCE_MANAGER.h  SHADER.cpp  SHADER.h  ShaderTest.h  TEXTURE.cpp  TEXTURE.h  TEXT_RENDERER.cpp  TEXT_RENDERER.h  TileMap.cpp  TileMap.h  conandata.yml  game.cpp  game.h  jsontoctilemapper.py  main.cpp  utility.h
oldthingsiwanttosave/gui with 9 scale/: NineSliceRenderer.cpp  NineSliceRenderer.h  game.cpp  utility.h
resources/gui/: pause_menu.rml
resources/levels/: level0.json  level1.json  level2.json
resources/shaders/: 9slice.frag  9slice.vert  box.vert  dogsprite.frag  dogsprite.fs  dogsprite.vert  dogsprite.vs  nuklear.frag  nuklear.vert  pause.frag  pause.vert  rmlui.frag  rmlui.vert
scripts/: input.json  input.json.example  jsontoctilemapper.py  output.cpp  tile_overlay_visualizer.py  tilemap_out.json
shaders/: 3.3.shader.fs  3.3.shader.vs
